--- a/sites/tb.pro/includes/base/base.html
+++ b/sites/tb.pro/includes/base/base.html
@@ -55,7 +55,7 @@
     </script>
 
   </head>
-  <body>
+  <body class="tbpro">
     {% include 'includes/base/calamity-bar.html' %}
     <main>
       <div id="main-content">
