--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -4,6 +4,8 @@
 
 {% extends "includes/base/base.html" %}
 
+{% include 'includes/base/calamity-bar.html' %}
+
 {% block site_header_unwrapped %}
 {% include 'includes/announcement.html' %}
 {% endblock %}
