Feat/integrate calamity bar (#956)
* Move settings.SITE_ANNOUNCEMENT check to announcement.html

* Add calamity bar to www and adjust styles

--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -4,11 +4,11 @@
 
 {% extends "includes/base/base.html" %}
 
-{% if settings.SITE_ANNOUNCEMENT %}
+{% include 'includes/base/calamity-bar.html' %}
+
 {% block site_header_unwrapped %}
 {% include 'includes/announcement.html' %}
 {% endblock %}
-{% endif %}
 
 {% block site_nav %}
 <nav class="site-nav">
