Update URLs in calamity bar for staging

--- a/sites/common/includes/base/calamity-bar.html
+++ b/sites/common/includes/base/calamity-bar.html
@@ -1,6 +1,6 @@
 <div id="calamity-bar">
   <div class="calamity-bar-tabs">
-    <a href="https://www.thunderbird.net">Thunderbird</a>
+    <a href="https://stage.thunderbird.net">Thunderbird</a>
     <a href="https://stage.tb.pro" class="active">Thunderbird Pro</a>
   </div>
 </div>
