Add zoom image to card on appointment landing page

--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -188,7 +188,7 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 331px;
+                    min-width: 268px;
                     grid-column: 1;
                     grid-row: 2;
                     padding: 0;
@@ -197,27 +197,21 @@ section#overview {
             }
 
             .overview-image {
-                .mixin-background-image('/media/img/thunderbird/tbpro/xs-bento-domain-high-res');
-                aspect-ratio: 1.2/1;
+                background-image: url('/media/svg/tbpro/zoom-logo.svg');
+                aspect-ratio: 4.32/1;
                 background-size: contain;
                 background-repeat: no-repeat;
-                background-position: bottom right;
+                background-position: center center;
 
-                height: 180px;
-                margin-top: 1.125rem;
-                margin-right: -2.5rem;
+                height: 50px;
+                margin-top: 5.125rem;
+                margin-bottom: 5.125rem;
                 width: 100%;
 
-                @media (min-width: @md) {
-                    .mixin-background-image('/media/img/thunderbird/tbpro/xl-bento-domain-high-res');
-                    aspect-ratio: .9/1;
-                }
-
                 @media (min-width: @lg) {
-                    margin-top: 0;
                     grid-column: 2;
                     grid-row: 1 / -1;
-                    height: 100%;
+                    margin: auto;
                 }
 
             }
