Rename calamity bar, prevent tb.pro links from opening in new tab

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -46,5 +46,5 @@
 // Components shared with tb.pro
 @import "./common/space.less";
 @import "./common/fonts.less";
-@import "./common/calamity-bar.less";
+@import "./common/tab-navigation-bar.less";
 @import "./common/shared-footer.less";
