--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -10,7 +10,7 @@
 @import "colours.less";
 @import "buttons.less";
 
-@import "../common/calamity-bar.less";
+@import "../common/tab-navigation-bar.less";
 @import "../common/shared-footer.less";
 
 // ------------------------------------------------------------
