--- a/assets/less/tbpro/index.less
+++ b/assets/less/tbpro/index.less
@@ -1,4 +1,4 @@
-@import "tbpro/base.less";
+@import "base.less";
 
 // Actual colors used
 //
@@ -11,13 +11,6 @@
 @keyframes sweep {
     0% { opacity: 0; }
     100% { opacity: 1}
-}
-
-
-// Constrain all main blocks to the largest breakpoint.
-.primary-block {
-    margin-inline: auto;
-    max-width: @lg;
 }
 
 header#masthead {
@@ -109,6 +102,13 @@ section#features {
         .feature-card:first-child {
             grid-row: 1 / -1;
             height: 100%;
+        }
+
+        // First card retains stacked layout.
+        .feature-card:not(:first-child) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
         }
     }
 
@@ -205,15 +205,6 @@ section#features {
 
     }
 
-    @media (min-width: @lg) {
-        // First card retains stacked layout.
-        .feature-card:not(:first-child) {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr;
-        }
-    }
-
     .mixin-card-gradient(@accent-color, @darken-by: 30%, @accent-position: 100%) {
         background-clip: padding-box;
         background-image: linear-gradient(349deg,
@@ -289,6 +280,8 @@ section#features {
 // 36px/2.25rem from last overview card and Made for You header
 section#overview {
     background: #fff;
+    padding-top: 2.25rem;
+
     header {
         .brand-headline-h1-sm();
         color: var(--header-color);
@@ -332,10 +325,10 @@ section#overview {
 
         .overview-card {
             border-radius: 1.5rem;
+            min-width: 0;
             padding-block: 1.5rem;
 
             @media (min-width: @lg) {
-                min-width: 594px;
                 padding-block: 0;
             }
 
@@ -348,6 +341,7 @@ section#overview {
 
             header {
                 .headings-h3-small();
+                color: #fff;
                 padding-inline: 1.25rem;
                 text-align: left;
 
@@ -357,10 +351,16 @@ section#overview {
             }
 
             p {
+                color: #fff;
                 margin: 0;
                 padding-inline: 1.25rem;
                 text-align: left;
             }
+
+            .overview-image {
+                width: 100%;
+            }
+
         }
     }
 
@@ -395,15 +395,6 @@ section#reasons {
         // For desktop, create parent grid for counter, reason, and explanation.
         grid-template-columns: auto auto 58%;
         row-gap: @space-36;
-    }
-
-    // Get rid of the additional padding for very wide viewports.
-    // The value 1536px was found via trial and error, though it's probably the
-    // max width + the calculated padding.
-    @media (min-width: 1536px) {
-        // overrides the padding for elements matching #main-content > *
-        padding-inline: unset !important;
-        // Opt into default value via `unset` instead of setting to `0`.
     }
 
     .reason {
@@ -944,5 +935,20 @@ section#testimonials {
                 width: var(--active-dot-size);
             }
         }
+    }
+}
+
+
+
+.debug {
+    outline: 1px solid blue;
+    @media (min-width: @md) {
+        outline: 1px solid green;
+    }
+
+    @media (min-width: @lg) {
+        outline: 1px solid red;
+        // overrides the padding for elements matching #main-content > *
+        // padding-inline: unset !important;
     }
 }
