--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -64,20 +64,12 @@ header#masthead {
 }
 
 section#overview {
-    padding-top: 2.25rem;
     .overview-card-container {
         .overview-card {
             background-color: #1a202c;
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-
-            header, p {
-                color: #fff;
-            }
-            .overview-image {
-                width: 100%;
-            }
         }
 
         .overview-card-1 {
@@ -98,7 +90,7 @@ section#overview {
 
                 p {
                     grid-row: 4;
-                    max-width: 368px;
+                    // max-width: 368px;
                     padding-inline: 2rem;
                 }
             }
@@ -139,9 +131,9 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 331px;
                     grid-column: 1;
                     grid-row: 2;
+                    // min-width: 331px;
                     padding: 0;
                     padding-bottom: 2rem;
                     padding-left: 2rem;
@@ -188,9 +180,9 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 268px;
                     grid-column: 1;
                     grid-row: 2;
+                    // min-width: 268px;
                     padding: 0;
                     padding-left: 2rem;
                 }
