--- a/sites/common/includes/base/shared-footer.html
+++ b/sites/common/includes/base/shared-footer.html
@@ -3,7 +3,7 @@
 {% endmacro %}
 
 <footer id="tb-footer">
-  <div id="site-nav">
+  <div id="site-nav" class="primary-block">
     <a id="nav-link-home" href="{{ url('tbpro.home') }}">
       {{ svg('tbpro/logo-tbpro') }}
     </a>
@@ -14,7 +14,7 @@
       <a href="{{ url('tbpro.send') }}">Send</a>
     </div>
   </div>
-  <div id="moz-nav">
+  <div id="moz-nav" class="primary-block">
     <a id="moz-link-home" href="{{ url('mozorg.home') }}">
       {{ svg('mozilla-lockup-white-rgb') }}
     </a>
