--- a/sites/tb.pro/includes/base/base.html
+++ b/sites/tb.pro/includes/base/base.html
@@ -26,7 +26,7 @@
     <link href="{{ static('css/normalize.css') }}" rel="stylesheet" type="text/css" />
 
     {% block base_css %}
-    <link href="{{ static('css/tbpro-style.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ static('css/tbpro.css') }}" rel="stylesheet" type="text/css" />
     {% endblock %}
 
     {% block extra_css %}
