--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -64,20 +64,12 @@ header#masthead {
 }
 
 section#overview {
-    padding-top: 2.25rem;
     .overview-card-container {
         .overview-card {
             background-color: #1a202c;
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-
-            header, p {
-                color: #fff;
-            }
-            .overview-image {
-                width: 100%;
-            }
         }
 
         .overview-card-1 {
@@ -139,7 +131,7 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 331px;
+                    width: 100%;
                     grid-column: 1;
                     grid-row: 2;
                     padding: 0;
@@ -165,7 +157,6 @@ section#overview {
                     justify-self: start;
                     margin-left: 18px;
                     margin-top: 0;
-                    max-width: 160px;
                 }
             }
         }
@@ -180,6 +171,7 @@ section#overview {
                 grid-template-columns: 1fr 1fr;
                 grid-template-rows: 3fr 4fr;
                 padding-inline: 0.75rem 0;
+
                 header {
                     align-self: end;
                     grid-column: 1;
@@ -188,7 +180,7 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 331px;
+                    // min-width: 331px;
                     grid-column: 1;
                     grid-row: 2;
                     padding: 0;
