--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -46,9 +46,9 @@ header#masthead {
         background-size: cover;
         height: 80px;
 
-        .mixin-background-image('/media/img/thunderbird/tbpro/xs-thundermail-logo-high-res');
+        .mixin-background-image('/media/img/tbpro/xs-thundermail-logo-high-res');
         @media (min-width: @md) {
-            .mixin-background-image('/media/img/thunderbird/tbpro/xl-thundermail-logo-high-res');
+            .mixin-background-image('/media/img/tbpro/xl-thundermail-logo-high-res');
         }
     }
 
@@ -56,32 +56,24 @@ header#masthead {
         aspect-ratio: 1.9/1;
 
         width: 100%;
-        .mixin-background-image('/media/img/thunderbird/tbpro/xs-thundermail-card-high-res');
+        .mixin-background-image('/media/img/tbpro/xs-thundermail-card-high-res');
         @media (min-width: @md) {
-            .mixin-background-image('/media/img/thunderbird/tbpro/xl-thundermail-card-high-res');
+            .mixin-background-image('/media/img/tbpro/xl-thundermail-card-high-res');
         }
     }
 }
 
 section#overview {
-    padding-top: 2.25rem;
     .overview-card-container {
         .overview-card {
             background-color: #1a202c;
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-
-            header, p {
-                color: #fff;
-            }
-            .overview-image {
-                width: 100%;
-            }
         }
 
         .overview-card-1 {
-            background-image: url('/media/img/thunderbird/tbpro/thundermail-bento-main.png');
+            background-image: url('/media/img/tbpro/thundermail-bento-main.png');
             overflow: hidden;
 
             @media (min-width: @lg) {
@@ -105,7 +97,7 @@ section#overview {
 
 
             .overview-image {
-                .mixin-background-image('/media/img/thunderbird/tbpro/xs-bento-standards-high-res');
+                .mixin-background-image('/media/img/tbpro/xs-bento-standards-high-res');
                 aspect-ratio: 2.6/1;
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -114,7 +106,7 @@ section#overview {
                 margin-bottom: 1.5rem;
                 margin-top: 1rem;
                 @media (min-width: @lg) {
-                    .mixin-background-image('/media/img/thunderbird/tbpro/xl-bento-standards-high-res');
+                    .mixin-background-image('/media/img/tbpro/xl-bento-standards-high-res');
                     aspect-ratio: 2.3/1;
                     grid-row: 2;
                 }
@@ -122,7 +114,7 @@ section#overview {
         }
 
         .overview-card-2 {
-            background-image: url('/media/img/thunderbird/tbpro/thundermail-bento-right-top.png');
+            background-image: url('/media/img/tbpro/thundermail-bento-right-top.png');
 
             @media (min-width: @lg) {
                 display: grid;
@@ -139,7 +131,7 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 331px;
+                    width: 100%;
                     grid-column: 1;
                     grid-row: 2;
                     padding: 0;
@@ -149,7 +141,7 @@ section#overview {
             }
 
             .overview-image {
-                .mixin-background-image('/media/img/thunderbird/tbpro/xs-bento-hosted-high-res');
+                .mixin-background-image('/media/img/tbpro/xs-bento-hosted-high-res');
                 aspect-ratio: 1.2/1;
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -165,12 +157,11 @@ section#overview {
                     justify-self: start;
                     margin-left: 18px;
                     margin-top: 0;
-                    max-width: 160px;
                 }
             }
         }
         .overview-card-3 {
-            background-image: url('/media/img/thunderbird/tbpro/thundermail-bento-right-bottom.png');
+            background-image: url('/media/img/tbpro/thundermail-bento-right-bottom.png');
             padding-bottom: 0;
             overflow: hidden;
 
@@ -180,6 +171,7 @@ section#overview {
                 grid-template-columns: 1fr 1fr;
                 grid-template-rows: 3fr 4fr;
                 padding-inline: 0.75rem 0;
+
                 header {
                     align-self: end;
                     grid-column: 1;
@@ -188,7 +180,7 @@ section#overview {
                     padding-left: 2rem;
                 }
                 p {
-                    min-width: 331px;
+                    // min-width: 331px;
                     grid-column: 1;
                     grid-row: 2;
                     padding: 0;
@@ -197,7 +189,7 @@ section#overview {
             }
 
             .overview-image {
-                .mixin-background-image('/media/img/thunderbird/tbpro/xs-bento-domain-high-res');
+                .mixin-background-image('/media/img/tbpro/xs-bento-domain-high-res');
                 aspect-ratio: 1.2/1;
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -209,7 +201,7 @@ section#overview {
                 width: 100%;
 
                 @media (min-width: @md) {
-                    .mixin-background-image('/media/img/thunderbird/tbpro/xl-bento-domain-high-res');
+                    .mixin-background-image('/media/img/tbpro/xl-bento-domain-high-res');
                     aspect-ratio: .9/1;
                 }
 
