--- a/sites/tb.pro/includes/base/base.html
+++ b/sites/tb.pro/includes/base/base.html
@@ -26,7 +26,7 @@
     <link href="{{ static('css/normalize.css') }}" rel="stylesheet" type="text/css" />
 
     {% block base_css %}
-    <link href="{{ static('css/tbpro-style.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ static('css/tbpro.css') }}" rel="stylesheet" type="text/css" />
     {% endblock %}
 
     {% block extra_css %}
@@ -56,7 +56,7 @@
 
   </head>
   <body class="tbpro">
-    {% include 'includes/base/calamity-bar.html' %}
+    {% include 'includes/base/tab-navigation-bar.html' %}
     <main>
       <div id="main-content">
       {% block content %}{% endblock %}
