Use current_year also in tbpro footer

--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -23,7 +23,7 @@
       <a href="#">Participation Guidelines</a>
     </div>
     <div id="tb-legal">
-      <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–2025 by individual contributors. Content available under a Creative Commons license.</p>
+      <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–{{ current_year }} by individual contributors. Content available under a Creative Commons license.</p>
       <p>
         <a href="#">Contribute to this site</a>
       </p>
