Add hover/active states to product links in top nav

--- a/assets/less/tbpro/product/send.less
+++ b/assets/less/tbpro/product/send.less
@@ -1,6 +1,11 @@
 @import "../breakpoints.less";
 @import "../images.less";
 @import "../../common/space.less";
+@import "../nav.less";
+
+#nav-link-send {
+    .mixin-active-nav-link();
+}
 
 header#masthead {
     align-items: center;
