Add missing nav changes, update copy on tbpro landing page

--- a/assets/less/tbpro/index.less
+++ b/assets/less/tbpro/index.less
@@ -684,7 +684,6 @@ section#details {
 
         }
 
-
         .subscription-callout {
             background-image: linear-gradient(150deg, #131c28 30%, #0b1017);
             border-radius: @space-12;
@@ -700,7 +699,8 @@ section#details {
 
             button {
                 color: var(--text-icon-base);
-                display: inline-block;
+                display: flex;
+                margin: 0 auto;
                 &:hover {
                     color: var(--colour-ti-base);
                 }
@@ -724,6 +724,9 @@ section#details {
                     500,
                     0.75rem
                 );
+                display: inline-flex;
+                flex-direction: row;
+                gap: 0.375rem;
 
                 b {
                     font-size: 2rem;
@@ -733,6 +736,16 @@ section#details {
                         normal,
                         2rem
                     );
+
+                    sup {
+                        // em, not rem for the sup
+                        font-size: 0.6em;
+                        top: -0.55em;
+                    }
+                }
+                span {
+                    text-align: left;
+                    line-height: 1.32;
                 }
             }
 
