--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -40,13 +40,13 @@
           <ul>
             <li></li>
             <li>
-              <a href="{{ url('tbpro.thundermail') }}">Thundermail</a>
+              <a id="nav-link-thundermail" href="{{ url('tbpro.thundermail') }}">Thundermail</a>
             </li>
             <li>
-              <a href="{{ url('tbpro.appointment') }}">Appointment</a>
+              <a id="nav-link-appointment" href="{{ url('tbpro.appointment') }}">Appointment</a>
             </li>
             <li>
-              <a href="{{ url('tbpro.send') }}">Send</a>
+              <a id="nav-link-send" href="{{ url('tbpro.send') }}">Send</a>
             </li>
             <li class="nav-item-join-button">
               <button class="button-brand-small-outline-label">Join Waitlist</button>
