increase tbpro logo size for desktop

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -88,6 +88,11 @@ body {
                 grid-column-start: 1;
                 grid-row-start: 1;
                 z-index: 9;
+
+                svg {
+                    height: 36px;
+                    width: 208px;
+                }
             }
         }
 
